# DiffMatte

./: .gitignore  pyproject.toml
diffmatte/: __init__.py
diffmatte/configs/: res34.py
diffmatte/configs/common/: dataloader.py  diffusion.py  difmatte.py  loss.py  model.py
diffmatte/modeling/decoder/: DUNet.py
diffmatte/modeling/diffusion/: script_utils.py  uniform_gauss.py
diffmatte/modeling/meta_arch/: difmatte.py  difmodel.py
